--- a/Webapp_Site_root/templates/store/products/detail.html
+++ b/Webapp_Site_root/templates/store/products/detail.html
@@ -31,8 +31,14 @@
                                     <option value="">3</option>
                                     <option value="">4</option>
                                 </select>
-
+                                <label for="select">Size</label>
+                                <select id="select">
+                                    <option value="">S</option>
+                                    <option value="">M</option>
+                                    <option value="">L</option>
+                                </select>
                             </div>
+
                             <div class="col-6 text-end"><button type="button" class="btn btn-secondary btn-sm">Add to
                                     basket</button></div>
                         </div>
